added all server tests to get 97% coverage, excludes route that calls flickr API

--- a/templates/getmap.html
+++ b/templates/getmap.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Explore Trips {% endblock %}
+{% block title %} Map Trip {% endblock %}
 
 {% block content %}
 
