--- a/templates/tripdetails.html
+++ b/templates/tripdetails.html
@@ -15,7 +15,7 @@
       </form>
         {% endif %}
 
-      <form action="/get_map" method="POST">
+      <form action="/get-map" method="POST">
         <input type="hidden" name="trip-map" value={{ trip.trip_id }}>
         <input type="submit" class="btn btn-link" value="Get Map">
   <section id="results">
