--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+
+  <script>
+    $('.img-responsive').hover(
+       function(){ $(this).addClass('hover') },
+       function(){ $(this).removeClass('hover') })
+  </script>
 
 
 </head>
@@ -73,8 +78,10 @@
   {% for flash in get_flashed_messages() %}
     <div class="alert alert-danger" style="width:90%; margin:0 auto;">{{ flash }}</div>
   {% endfor %}
+<div class="wrapper">
 {% block content %}
 {% endblock %}
+</div>
 </div>
 
 
