--- a/templates/explore.html
+++ b/templates/explore.html
@@ -5,21 +5,25 @@
 {% block content %}
 
 {% if trips %}
-  <section id="results">
+  <section id="blocks">
     {% for trip in trips %}
+    <div class="results">
     <h3>{{ trip.name }}</h3>
           {% if trip.photos %}
-              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 img-results">
-              <img src="{{ trip.photos[0].url }}" class="img-responsive"></div>
+          <form action="/view-trip" method="POST">
+            <input type="hidden" name="user" value={{ trip.user_id }}>
+            <input type="hidden" name="trip" value={{ trip.trip_id }}>
+            <input type="image" name="submit" src="{{ trip.photos[0].url }}" border="0" alt="Submit" class="img-responsive" />
+          </form>
           {% else %}
               <h4> Sorry this trip does not have any photos</h4>
           {% endif %}
-<!--     <a href="/{{ trip.user_id }}/{{ trip.trip_id }}" class="thumbnail">View Details</a> -->
-    <form action="/view-trip" method="POST">
+<!--     <form action="/view-trip" method="POST">
         <input type="hidden" name="user" value={{ trip.user_id }}>
         <input type="hidden" name="trip" value={{ trip.trip_id }}>
         <input type="submit" class="btn btn-link" value="View Details">
-    </form>
+    </form> -->
+    </div>
     {% endfor %}
   </section>
 {% else %}
