--- a/templates/results.html
+++ b/templates/results.html
@@ -5,13 +5,13 @@
 {% block content %}
 {% if photos %}
   {% if trip %}
-    <h3>{{ trip.city_name }} Photos</h3>
+    <h3>  {{ trip.city_name }} Photos</h3>
   {% else %}
     <h3>Search Results</h3>
   {% endif %}
-    <section id="results">
+    <section id="blocks">
     {% for photo in photos %}
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 img-results">
+    <div class="results">
       {% if session.get('login') and trip %}
         <img src="{{ photo.url }}" data-src="{{ photo.url }}" id="{{ photo.img_id }}" class="img-responsive">
 
