--- a/templates/base.html
+++ b/templates/base.html
@@ -19,17 +19,11 @@
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
 
-  <script>
-    $('.img-responsive').hover(
-       function(){ $(this).addClass('hover') },
-       function(){ $(this).removeClass('hover') })
-  </script>
-
 
 </head>
 <body>
 <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
 <!--       <i class="fas fa-heart"></i>
       <i class="far fa-heart"></i> -->
@@ -83,7 +77,29 @@
 {% endblock %}
 </div>
 </div>
+<script>
 
+$('.img-responsive').hover(
+   function(){ $(this).addClass("hover") },
+   function(){ $(this).removeClass("hover") })
+
+window.onscroll = function() {toggleNav()};
+
+// Get the navbar
+var navbar = document.getElementById("navbar");
+
+// Get the offset position of the navbar
+var sticky = navbar.offsetTop;
+
+// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function toggleNav() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
 
 </body>
 </html>
