--- a/templates/base.html
+++ b/templates/base.html
@@ -79,19 +79,9 @@
 </div>
 <script>
 
-$('.img-responsive').hover(
-   function(){ $(this).addClass("hover") },
-   function(){ $(this).removeClass("hover") })
-
 window.onscroll = function() {toggleNav()};
-
-// Get the navbar
-var navbar = document.getElementById("navbar");
-
-// Get the offset position of the navbar
-var sticky = navbar.offsetTop;
-
-// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+let navbar = document.getElementById("navbar");
+let sticky = navbar.offsetTop;
 function toggleNav() {
   if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky")
