--- a/templates/mytrips.html
+++ b/templates/mytrips.html
@@ -32,18 +32,14 @@
     <div class="results">
     <h3>{{ trip.name }}</h3>
           {% if trip.photos %}
-          <form action="/view-trip" method="POST">
+          <form class='testing' action="/view-trip" method="POST">
           <input type="hidden" name="trip" value={{ trip.trip_id }}>
-          <input type="image" name="submit" src="{{ trip.photos[0].url }}" border="0" alt="Submit" class="img-responsive" />
+          <input type="image" name="submit" src="{{ trip.photos[0].url }}" border="0" alt="Submit" class="img-responsive overlay" />
           </form>
           {% else %}
               <h4> Sorry this trip does not have any photos</h4>
           {% endif %}
-<!--       <form action="/view-trip" method="POST">
-        <input type="hidden" name="trip" value={{ trip.trip_id }}>
-        <input type="submit" class="btn btn-link" value="View Details">
-      </form> -->
-      <form action="/remove-trip" method="POST">
+      <form class="remove-trip" action="/remove-trip" method="POST">
         <input type="hidden" name="user" value={{ session.get('login') }}>
         <input type="hidden" name="trip" value={{ trip.trip_id }}>
         <input type="submit" class="btn btn-link" value="Remove Trip">
@@ -64,6 +60,17 @@
       modal.style.display='none';
     }
   }
+
+  const test = $('.remove-trip');
+
+    test.on('submit', (evt) => {
+    let r = confirm('Are you sure you want to delete this trip?')
+    if (r == false){
+      evt.preventDefault();
+    }
+  })
+
+
 </script>
 
 {% endblock %}
