--- a/templates/base.html
+++ b/templates/base.html
@@ -79,16 +79,16 @@
 </div>
 <script>
 
-window.onscroll = function() {toggleNav()};
-let navbar = document.getElementById("navbar");
-let sticky = navbar.offsetTop;
-function toggleNav() {
-  if (window.pageYOffset >= sticky) {
-    navbar.classList.add("sticky")
-  } else {
-    navbar.classList.remove("sticky");
-  }
-}
+// window.onscroll = function() {toggleNav()};
+// let navbar = document.getElementById("navbar");
+// let sticky = navbar.offsetTop;
+// function toggleNav() {
+//   if (window.pageYOffset >= sticky) {
+//     navbar.classList.add("sticky")
+//   } else {
+//     navbar.classList.remove("sticky");
+//   }
+// }
 </script>
 
 </body>
