--- a/templates/tripdetails.html
+++ b/templates/tripdetails.html
@@ -30,7 +30,7 @@
           action="/remove-photo" 
           class="remove-photo-form" 
           method="POST">
-        <input type="submit" class="btn btn-link" value="Remove from Trip">
+        <input type="submit" class="btn btn-outline-dark my-2 my-sm-0 photobutton" value="Remove from Trip">
       </form>
       {% endif %}
     </div>
