trying ajax call to make autocomplete cities feature appeear out of search box

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -18,6 +18,11 @@
           {% else %}
               <h4> Sorry this trip does not have any photos</h4>
           {% endif %}
+      <form action="/remove-fav" method="POST">
+        <input type="hidden" name="trip" value={{ trip.trip_id }}>
+        <input type="hidden" name="user" value={{ session.get('login') }}>
+        <input type="submit" class="btn btn-outline-dark my-2 my-sm-0 photobutton" value="Remove {{trip.name}}">
+      </form>
       </div>
     {% endfor %}
   </section>
