--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,14 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
+
       <form action='/results' method='POST' class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" name='city' placeholder="City" aria-label="City">
+        <input id="search-city" class="form-control mr-sm-2" type="search" name='city' placeholder="City" aria-label="City">
+        <div id="suggestion-box"></div>
         <input class="form-control mr-sm-2" type="search" name='tag' placeholder="Tag" aria-label="Tag">
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Show Me Photos!</button>
       </form>
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         {% if session.get('login') %}
@@ -79,16 +82,20 @@
 </div>
 <script>
 
-// window.onscroll = function() {toggleNav()};
-// let navbar = document.getElementById("navbar");
-// let sticky = navbar.offsetTop;
-// function toggleNav() {
-//   if (window.pageYOffset >= sticky) {
-//     navbar.classList.add("sticky")
-//   } else {
-//     navbar.classList.remove("sticky");
-//   }
-// }
+  function showSuggestions(results) {
+    $("#suggestion-box").show()
+    $("#suggestion-box").html(results);
+  }
+
+  function getSuggestions(evt) {
+    let url = "/auto";
+    let inputData = {"prefix": $(evt.target).val()};
+
+    $.get(url, inputData, replaceForecast);
+  }
+
+  $("#search-city").on('keyup', getSuggestions);
+
 </script>
 
 </body>
