--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,20 @@
     z-index: 1000000;
   }
 
+  li {
+  color: #f8f9fa; 
+  }
+
+  .nav-link {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+  }
+
+  .form-control {
+    font-size: 1.1rem ;
+  }
+
   .sticky{
     position: fixed;
     top: 0;
@@ -82,28 +96,6 @@
     color: rgba(0,0,0,.5);
     border-color: #f8f9fa;
   }
-
-/*  div.image {
-    position: relative;
-  }
-
-  div.image_overlay {
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    background: rgba(0,0,0,1);
-  }
-
-  div.image_overlay:hover {
-    opacity: 1;
-    background: rgba(0,0,0,0.25);
-  }
-
-  h3.vertical_header {
-    position: absolute;
-    top: 50px;
-    color: white;
-  }*/
 
   .overlay{
     max-width: 100%;
