--- a/templates/login.html
+++ b/templates/login.html
@@ -4,32 +4,44 @@
 
 {% block content %}
 
-<form class="form-signin" method="POST">
-
-  <h2 class="form-signin-heading">Please Sign In</h2>
-
-  <div class="form-group">
-    <label for="email-field" class="sr-only">Email Address</label>
-    <input type="email"
-           name="email"
-           class="form-control input-lg"
-           placeholder="Email Address"
-           required
-           autofocus>
+<body class="login">
+<br><br><br><br><br><br>
+<div class="container">
+  <div class="d-flex justify-content-center h-100">
+    <div class="card">
+      <div class="card-header">
+        <h3>Sign In</h3>
+      </div>
+      <div class="card-body">
+        <form class="form-signin" method="POST">
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            <input type="text" name="email" class="form-control" placeholder="email" required autofocus="">
+          </div>
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-key"></i></span>
+            </div>
+            <input type="password" name="password" class="form-control" placeholder="password" required>
+          </div>
+          <div class="row align-items-center remember">
+            <input type="checkbox">Remember Me
+          </div>
+          <div class="form-group">
+            <input type="submit" value="Login" class="btn float-right btn btn-secondary btn-lg">
+          </div>
+        </form>
+      </div>
+      <div class="card-footer">
+        <div class="d-flex justify-content-center links">
+          Don't have an account?  <a href="/signup">Sign Up</a>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <label for="password-field" class="sr-only">Password</label>
-    <input type="password"
-           name="password"
-           class="form-control input-lg"
-           placeholder="Password"
-           required>
-  </div>
-
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In
-  </button>
-
-</form>
+</div>
+</body>
 
 {% endblock %}
