--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,16 +21,16 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../static/imgs/beach.jpg">
+      <img src="../static/imgs/island.jpg">
       <div class="carousel-caption">
         <h1 class="display-2 pacifico"><i class="fas fa-camera-retro"></i> PinTrip</h1>
         <h3>Plan your next travel destination</h3>
         <a href="/signup" class="btn btn-outline-dark btn-lg">SIGN UP</a>
-        <a href="/login" class="btn btn-primary btn-lg"">LOGIN</a>
+        <a href="/login" class="btn btn-primary btn-lg">LOGIN</a>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../static/imgs/bison.jpg">
+      <img src="../static/imgs/cpark.jpg">
       <div class="carousel-caption">
         <h1 class="display-2 pacifico"><i class="fas fa-camera-retro"></i> PinTrip</h1>
         <h3>Plan your next travel destination</h3>
