--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,51 +4,54 @@
 
 {% block content %}
 
-<form class="form-signin" method="POST">
+<body class="signin">
+<br><br><br><br><br><br>
+<div class="container">
+  <div class="d-flex justify-content-center h-100">
+    <div class="card">
+      <div class="card-header">
+        <h3>Register</h3>
+      </div>
 
-  <h2 class="form-signin-heading">Sign up!</h2>
+      <div class="card-body">
+        <form class="form-signin" method="POST">
 
-  <div class="form-group">
-    <label for="fname-field" class="sr-only">First Name</label>
-    <input type="fname"
-           name="fname"
-           class="form-control input-sm"
-           placeholder="First Name"
-           required
-           autofocus>
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-pencil-alt"></i></span>
+            </div>
+            <input type="text" name="fname" class="form-control" placeholder="First Name" required autofocus="">  
+            </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-pencil-alt"></i></span>
+            </div>
+            <input type="text" name="lname" class="form-control" placeholder="Last Name" required autofocus="">  
+            </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            <input type="text" name="email" class="form-control" placeholder="Email Address" required autofocus="">  
+            </div>
+
+          <div class="input-group form-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-key"></i></span>
+            </div>
+            <input type="password" name="password" class="form-control" placeholder="Password" required>
+          </div>
+
+          <div class="form-group">
+            <input type="submit" value="Sign Up" class="btn float-right btn btn-secondary btn-lg">
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="lname-field" class="sr-only">Last Name</label>
-    <input type="lname"
-           name="lname"
-           class="form-control input-sm"
-           placeholder="Last Name"
-           required
-           autofocus>
-  </div>
-
-  <div class="form-group">
-    <label for="email-field" class="sr-only">Email Address</label>
-    <input type="email"
-           name="email"
-           class="form-control input-sm"
-           placeholder="Email Address"
-           required
-           autofocus>
-  </div>
-
-  <div class="form-group">
-    <label for="password-field" class="sr-only">Password</label>
-    <input type="password"
-           name="password"
-           class="form-control input-sm"
-           placeholder="Password"
-           required>
-  </div>
-
-  <button class="btn btn-md btn-primary btn-block" type="submit">Sign Up
-  </button>
-
-</form>
+</div>
+</body>
 
 {% endblock %}
