hide mapbox API key and pass as variable to template

--- a/templates/getmap.html
+++ b/templates/getmap.html
@@ -7,7 +7,7 @@
 <div id='map'></div>
 
 <script>
-mapboxgl.accessToken = 'pk.eyJ1IjoiamVuaWh1YW5nIiwiYSI6ImNqczlvM2NwejFrNG00YW1zcWFvc2dkNm4ifQ.bRg_E09Vk0gwxrcEKopVpQ';
+mapboxgl.accessToken = '{{ key }}';
 
 let cityGeo = JSON.parse('{{ cityGeo|safe }}')
 
