--- a/templates/results.html
+++ b/templates/results.html
@@ -5,16 +5,16 @@
 {% block content %}
 {% if photos %}
   {% if trip %}
-    <h3>  {{ trip.city_name }} Photos</h3>
+  <br>
+    <h2>  {{ trip.city_name }} Photos</h2>
   {% else %}
-    <h3>Search Results</h3>
+    <h2>Search Results</h2>
   {% endif %}
     <section id="blocks">
     {% for id,photo in photos.items() %}
     <div class="details">
       {% if session.get('login') and trip and photo %}
         <img src="{{ photo.url }}" data-src="{{ photo.url }}" id="{{ photo.img_id }}" class="img-responsive">
-        <br>
         <form class="add-trip-form"
         data-img_id="{{photo.img_id}}"
         data-url="{{photo.url}}" 
@@ -25,7 +25,7 @@
         id="form-{{photo.img_id}}" 
         action="/add-photo"
         method="POST">
-        <input type="submit" class="btn btn-outline-dark my-2 my-sm-0 photobutton" value="Add to Trip">
+        <input type="image" name="submit" src="../static/imgs/love.png" border="0" alt="Submit" class="love" /> 
       </form>
 
       {% elif photo %}
@@ -56,7 +56,6 @@ function toggleNav() {
 function handleAddSubmit() {
   $('form.add-trip-form').on('submit', (evt) => {
     evt.preventDefault();
-    alert('Photo added')
     $(evt.target).find($('input')).hide();
 
     const formInputs = {
