--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,11 @@
     color: #222;
   }
 
+  h2 {
+    text-align: center;
+    font-family: 'IBM Plex Sans', sans-serif;
+  }
+
   nav
   {
    position: fixed;
@@ -99,6 +104,11 @@
     bottom: -50%;
     left: -50%;
     right: -50%;
+  }
+
+  .love{
+    width: 3em;
+    height: 3em;
   }
 
   .img-details{
