--- a/templates/explore.html
+++ b/templates/explore.html
@@ -3,7 +3,9 @@
 {% block title %} Explore Trips {% endblock %}
 
 {% block content %}
-
+<br>
+<h2>Explore Trips</h2>
+<br>
 {% if trips %}
   <section id="blocks">
     {% for trip in trips %}
