--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -3,7 +3,9 @@
 {% block title %} Favorite Trips {% endblock %}
 
 {% block content %}
-
+<br>
+<h2>Saved Favorites</h2>
+<br>
 {% if trips %}
   <section id="blocks">
     {% for trip in trips %}
