--- a/templates/tripdetails.html
+++ b/templates/tripdetails.html
@@ -7,18 +7,23 @@
 
 {% if photos %}
 <br>
-  <h2>{{ trip.city_name }} Saved Photos</h2>
+<div class="title">
+      <h2>{{ trip.city_name }} Trip </h2><br>
         {% if session.get('login') != trip.user_id %}
       <form action="/add-fav" method="POST">
         <input type="hidden" name="trip" value={{ trip.trip_id }}>
         <input type="hidden" name="user" value={{ session.get('login') }}>
-        <input type="submit" class="btn btn-danger" value="Add to Favorites">
+        <input type="image" name="submit" src="../static/imgs/love.png" border="0" alt="Submit" class="mapicon" />
+<!--         <input type="submit" class="btn btn-primary" value="ADD TO FAV"> -->
       </form>
         {% endif %}
 
       <form action="/get-map" method="POST">
         <input type="hidden" name="trip-map" value={{ trip.trip_id }}>
-        <input type="submit" class="btn btn-success" value="Get Map">
+        <input type="image" name="submit" src="../static/imgs/map.png" border="0" alt="Submit" class="mapicon" />
+<!--         <input type="submit" class="btn btn-success" value="MAP"> -->
+      </form>
+</div>
 
   <section id="blocks">
     {% for photo in photos %}
