added gray out heart instead of disappear the heart for on click search add photo'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,15 @@
     padding-top: 6px;
   }
 
+  .grayheart {
+    width: 2.5em;
+    height: 2.8em;
+    padding-top: 6px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    display: none
+  }
+
   .mapicon{
     width: 3.5em;
     height: 3.5em;
